<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity"
    android:background="#f0f0f0">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile.pic.display"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/background"
            android:layout_marginTop="6dp"
            android:padding="3dp"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/main"
            android:textStyle="bold"
            android:fontFamily="@font/actor"
            android:textColor="#5d5d5a"
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_margin="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="#f0f0f0">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/camera"
                android:id="@+id/camera_button"
                android:background="@drawable/circular_camera"
                android:padding="6dp"
                android:elevation="1dp"/>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/location"
                android:background="@drawable/circular_camera"
                android:padding="6dp"
                android:id="@+id/find_loc"
                android:layout_marginLeft="8dp"
                android:elevation="1dp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f0f0f0">
                <Button
                    android:id="@+id/search_barr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_search"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/search"
                    android:paddingLeft="20dp"
                    android:textAllCaps="false"
                    android:gravity="left|center_vertical"
                    android:textStyle="normal"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/search"/>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp">

                <fragment
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_margin="10dp"
                    class="com.google.android.gms.maps.SupportMapFragment"
                    android:id="@+id/mapwhere"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/actor"
                android:textSize="20sp"
                android:text="@string/spaces"
                android:layout_margin="5dp"
                android:padding="8dp"
                android:textStyle="bold"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/md_contentRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:layout_margin="10dp"/>

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:src="@drawable/box"
                    android:id="@+id/box"/>

                <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/location_loading"
                    android:layout_gravity="center|center_vertical"
                    android:visibility="invisible"/>

            </FrameLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
